# nexamon-launcher

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/auth/: microsoft.rs  minecraft.rs  mod.rs  xbox.rs
src-tauri/src/commands/: auth.rs  dev.rs  fabric.rs  java.rs  launch.rs  minecraft.rs  mod.rs  packwiz.rs  profiles.rs  settings.rs
src-tauri/src/config/: accounts.rs  mod.rs  paths.rs  profiles.rs  settings.rs
src-tauri/src/download/: assets.rs  client.rs  java.rs  libraries.rs  mod.rs
src-tauri/src/install/: config_guard.rs  fabric.rs  integrity.rs  mod.rs  packwiz.rs
src-tauri/src/launch/: arguments.rs  classpath.rs  mod.rs  process.rs
src-tauri/src/util/: cancel.rs  hash.rs  mod.rs  platform.rs  progress.rs
src/assets/styles/: global.css
src/components/: Dialog.svelte  ProfileCard.svelte  ProgressBar.svelte  Sidebar.svelte  UpdateBanner.svelte
src/lib/: i18n.ts
src/lib/stores/: auth.ts  dev.ts  launcher.ts  profiles.ts  settings.ts  updater.ts
src/pages/: Console.svelte  Dev.svelte  Login.svelte  Main.svelte  Maintenance.svelte  Settings.svelte
