[package]
name = "nexamon-launcher"
version = "1.0.0"
description = "Nexamon - Custom Minecraft Launcher"
authors = ["firefloc"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha1 = "0.10"
sha2 = "0.10"
zip = "2"
dirs = "6"
flate2 = "1"
tar = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
sysinfo = "0.35"
